Issue 4038: Console overlapping auto complete hint
http://code.google.com/p/fbug/source/detail?r=9306

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -202,7 +202,6 @@ toolbar[iconsize="small"] #firebug-button > .toolbarbutton-icon {
     -moz-appearance: none;
     margin: 2px 0 0 0;
     padding: 0 4px;
-    height: 15px;
     border: none;
     font-family: monospace;
     font-size: 12px;
